--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,14 @@ Imports:
     cli,
     commonmark,
     purrr,
-    tinkr,
+    tinkr (>= 0.2.0.9001),
     tokenizers,
     withr,
     xml2
 URL: https://github.com/maelle/aeolus
 BugReports: https://github.com/maelle/aeolus/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Remotes:  
+    ropensci/tinkr
