--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,18 +10,17 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
 Imports: 
-    brio,
     cli,
-    commonmark,
     purrr,
     tinkr (>= 0.2.0.9001),
     tokenizers,
-    withr,
     xml2
 URL: https://github.com/maelle/aeolus
 BugReports: https://github.com/maelle/aeolus/issues
 Suggests: 
-    testthat (>= 3.0.0)
+    brio,
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
 Remotes:  
     ropensci/tinkr
