docs: update metadata

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: aeolus
-Title: What the Package Does (One Line, Title Case)
+Title: Unleash Useful Linebreaks in Markdown Documents
 Version: 0.0.0.9000
 Authors@R: 
     person("Maëlle", "Salmon", , "msmaellesalmon@gmail.com", role = c("cre", "aut"),
            comment = c(ORCID = "0000-0002-2815-0399"))
-Description: What the package does (one paragraph).
+Description: Add linebreaks at the end of sentences and remove other linebreaks.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
